Fix auto-zoom on input on mobile

--- a/charlie-web-demo/client/main.less
+++ b/charlie-web-demo/client/main.less
@@ -47,7 +47,7 @@ button {
     padding: 15px 15px 5px 65px;
     min-height: 100px;;
     line-height: 65px;
-    font-size: 40px;
+    font-size: 50px;
   }
 }
 
